# terminote

./: .gitignore  Cargo.toml  README.md  Settings.toml
scripts/: testdb_cleanup.py
src/: app.rs  config.rs  controller.rs  db.rs  input.rs  main.rs  note.rs
src/components/: component.rs  confirm_dialog.rs  edit_view.rs  list_view.rs  markdown_view.rs  mod.rs  toast.rs
src/models/: note.rs
src/ui/: edit_view.rs  list_view.rs  mod.rs
