[package]
name = "terminote"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.36", features = ["chrono", "uuid"] }
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
